--- a/my.css
+++ b/my.css
@@ -30,149 +30,115 @@ body  {
 	height:120px;
 	float:left;
 	width:100%;
-	margin-bottom:40px;
-	
+	margin:10px 0 40px 20px;
 } 
-header h1 {
-	margin: 0; 
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	padding-top: 10px;
-	padding-right: 0;
-	padding-bottom: 10px;
-	padding-left: 0;
+header p {
+	line-height:150%;
 	font-size: x-large;
-	
+	font-weight: bold;
+    }
+header h1 {
+/*	background-attachment: fixed;
+	background-repeat: no-repeat;*/
+	font-size: x-large;	
+}
+.logo1 {
+	float: left;
+	height: 50%;
 }
 .contacts1 {
-  width: 200px;
-  height: 100px;
-  margin-left: 200px;
+  width: 20%;
+  margin-left: 225px;
   float: left;
-  line-height: 21px;
   font-size: 14px;
+   line-height: 22px;
+  
 }
 .contacts2 {
-  width: 200px;
-  height: 100px;
-  margin: 10px;
+  width: 20%;
+  margin: 0 10px;
   float: left;
-  line-height: 21px;
   font-size: 14px;
+  line-height: 22px;
 }
-.sidebar1 a {
+
+.contacts2 a {
+color:#000;
+text-decoration: none;
+color: black;
+
+}
+aside a {
 color:#000;
 }
-.sidebar1 a::hover {
+aside a::hover {
 text-decoration:underline;
 font-size:14px;
 }
-.sidebar1 {
+aside {
 	float: left; 
 	width: 20%; 
-	padding: 15px 10px 15px 20px;
+	padding: 0 10px 15px 20px;
 }
-.sidebar1 ul  {
-	margin: 0px;
+aside ul  {
+
 	padding-left: 20px;
 	line-height: 150%;
 }
-.sidebar1 ul  li {
+aside ul li {
 margin:10px 0;
 }
-.sidebar1 ul  li a {
+aside ul li a {
 	color:#000;
 	font-size:13px;
 	text-decoration:none;
 }
-.sidebar1 ul  li a:hover {
+aside ul  li a:hover {
 	color:#000;
-	/* font-size:14px; */
 	text-decoration:underline;
 }
+
 .news {
 padding-top: 10px;
 }
 
-.maincontent { 
+main { 
 	width: 70%;
-	padding: 0 10px; 
 	float:left;
+padding-left: 25px;
 } 
-.maincontent img { 
-	width: 50%;
-	text-align: center;
+article img { 
+	width: 45%;
+	display: block;
+	margin: auto;
+	border-radius:10px;
+	border:5px solid #00698c;
 }
-.photo {
 
-	text-align: center;
-}
-
-footer { 
+address { 
 	background:#DDDDDD; 
 	height:90px;
 	float: left;
 	width: 100%;
 } 
-footer p {
+address p {
 	margin: 0; 
 	padding: 10px 10px; 
 }
-footer a {
-color:black;
-text-decoration:none;
-}
-footer a::hover {
-color:black;
-text-decoration:underline;
+
+footer img { 
+	width: 90%;
+	margin-bottom: 10px;
 }
 
-.fltrt { 
-	float: right;
-	margin-left: 8px;
-}
-.fltlft { 
-	float: left;
-	margin-right: 8px;
-}
-/*.clearfloat { 
-	clear:both;
-    height:0;
-    font-size: 1px;
-    line-height: 0px;
-}*/
-.wrapper .header img {
-	margin: 10px;
-}
 .logo {
-	margin: 10px;
 	float: left;
 	height: 100px;
 	width: 300px;
 }
 
-.logo {
-width:300px;
-height:100px;
-padding:10px;
-float:left;
-}
-h1 {
-	line-height:150%;
-}
-.bordered {
-	margin:15px;
-	border-radius:10px;
-	border:5px solid #00698c;
-}
-
 .wrapper:after {
 	content: "";
 	display: block;
-	clear: both;}
-
-/*.clearfix {
-	width:500px;
-	height:2px;
-	float:none;
-}*/
+	clear: both;
+}
