--- a/my.css
+++ b/my.css
@@ -15,7 +15,7 @@ body  {
 	text-align: left;
 	
 }
-.wrapper { 
+section { 
 	width: 960px;  
 	background-image:url(images/header-bg.png);
 	background-repeat:repeat-x;
@@ -26,21 +26,25 @@ body  {
 	border: 1px solid #000000;
 	text-align: left; 
 } 
-.header { 
+header { 
 	height:120px;
 	float:left;
 	width:100%;
-	margin:10px 0 40px 20px;
 } 
-header p {
+article header p {
 	line-height:150%;
 	font-size: x-large;
 	font-weight: bold;
+	
+	
     }
-header h1 {
-/*	background-attachment: fixed;
-	background-repeat: no-repeat;*/
+article header {
+	padding-bottom: 30px;
+}
+
+article header h1 {
 	font-size: x-large;	
+	
 }
 .logo1 {
 	float: left;
@@ -121,6 +125,7 @@ address {
 	float: left;
 	width: 100%;
 } 
+
 address p {
 	margin: 0; 
 	padding: 10px 10px; 
@@ -137,7 +142,7 @@ footer img {
 	width: 300px;
 }
 
-.wrapper:after {
+section:after {
 	content: "";
 	display: block;
 	clear: both;
