--- a/my.css
+++ b/my.css
@@ -15,7 +15,7 @@ body  {
 	text-align: left;
 	
 }
-main { 
+.wrapper { 
 	width: 960px;  
 	background-image:url(images/header-bg.png);
 	background-repeat:repeat-x;
@@ -31,18 +31,18 @@ header {
 	float:left;
 	width:100%;
 } 
-article header p {
+main header p {
 	line-height:150%;
 	font-size: x-large;
 	font-weight: bold;
 	
 	
     }
-article header {
+main header {
 	padding-bottom: 30px;
 }
 
-article header h1 {
+main header h1 {
 	font-size: x-large;	
 	
 }
@@ -111,13 +111,13 @@ padding-top: 10px;
 	float:left;
 padding-left: 25px;
 } */
-article{
+main{
 		width: 70%;
 	float:left;
 padding-left: 25px;
 }
 
-article img { 
+main img { 
 	width: 45%;
 	display: block;
 	margin: auto;
@@ -148,7 +148,7 @@ footer img {
 	width: 300px;
 }
 
-main:after {
+.wrapper:after {
 	content: "";
 	display: block;
 	clear: both;
